# docingestqa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: audit_demo.py  generate_demo_data.py
examples/assets/: chunks.jsonl  source_manifest.json
src/docingestqa/: __init__.py  __main__.py  auditor.py  checks.py  config.py  exceptions.py  models.py  readers.py  report.py  text_utils.py
tests/: test_auditor_report_demo.py  test_checks.py  test_readers.py
